change HTML structure

--- a/index.html
+++ b/index.html
@@ -3,57 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static Frontend Project</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Calculator</title>
 </head>
 <body>
-<header>
-    <nav class="navbar">
-        <div class="container">
-            <h1>My Static Site</h1>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
-
-<main>
-    <section id="home" class="hero-section">
-        <div class="container">
-            <h2>Welcome to My Website</h2>
-            <p>This is a simple static front-end example created for my software lab assignment.</p>
-        </div>
-    </section>
-
-    <section id="about" class="about-section">
-        <div class="container">
-            <h2>About</h2>
-            <p>This project is built with HTML, CSS, and JavaScript. It's designed as part of a Git project for software lab coursework.</p>
-        </div>
-    </section>
-
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <h2>Contact Us</h2>
-            <form id="contact-form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="5" required></textarea>
-
-                <button type="submit">Send Message</button>
-            </form>
-        </div>
-    </section>
-</main>
-
-<script src="js/script.js"></script>
 </body>
 </html>
