--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta name="description" content="Online Calculator">
     <meta name="keywords" content="sharif university,Calculator,HTML, CSS, JavaScript">
+    <!--    conflict-->
     <meta name="author" content="Amirreza Qhasemi, Hesam Asnaashari">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
